Updated pricing page & internal page

--- a/internal.html
+++ b/internal.html
@@ -49,11 +49,12 @@
                 <div class="categories">
                     <ul>
                         <li><a href="#ceo">CEO</a></li>
-                        <li><a href="#creative-director">creative director</a></li>
-                        <li><a href="#project-manager">project manager</a></li>
+                        <li><a href="#coo">COO</a></li>
+                        <li><a href="#creative-director">creative directors</a></li>
+                        <li><a href="#project-manager">project managers</a></li>
                         <li><a href="#new-biz-dev">new biz dev</a></li>
-                        <li><a href="#uiux-designer">UI/UX designer</a></li>
-                        <li><a href="#brand-strategist">brand/content strategist</a></li>
+                        <li><a href="#uiux-designer">UI/UX designers</a></li>
+                        <li><a href="#brand-strategist">brand strategist</a></li>
                     </ul>
                 </div>
             </div>            
@@ -69,7 +70,7 @@
 		</div>
 		<section class="description fL cf">
 			<p><span class = "darkText">TRANSPARENCY</span> No big secrets here. Only hard work & communication. We're all adults & deserve to be informed. We believe in transparency of finances & roles & thus all wages & work structure is public knowledge (just ask!)</p>
-			<p><span class = "darkText">OWNERSHIP</span> We want leaders, not sheep. People who want to take ownership and have real accountability. From your first day as a retainered employee of fleetCreature you will start earning shares & after 1 year can begin taking part in shareholder profits & decision making.</p>
+			<p><span class = "darkText">OWNERSHIP</span> We want leaders, not sheep. People who want to take ownership and have real accountability. From your first day as a contractor of fleetCreature you will start earning shares & after $50k in wages can begin taking part in shareholder profits & decision making.</p>
 			<p><span class = "darkText">AUTONOMY</span> We are not a 9-5 company. We expect results but give you freedom in determining how you will make those results happen. We encourage you to take the lead, make decisions & solve probelms on your own. Leadership will not be frowned upon - ask forgiveness, not permission.</p>
 		</section>
 		<div class="banner span-4 last">
@@ -80,49 +81,105 @@
 				<h3>total current shares: 1000</h3>
 			</div>
 		</div>
+		<div class = "right-column-proposals">
+			<div class="bullets span-2 last fR cf">
+				<p>EARNING FORMAT</p>
+				<ul class="deliverables">
+					<li>60% of shares are fixed (owned permanently by Alyssa Reese & Jesse Seavers, vested over 3 years @10% per year)</li>
+					<li>40% are flexible</li>
+					<li>50 flexible shares earned for each $50,000 paid from fleetCreature</li>
+				</ul>
+			</div>
+		</div>
 		<div class="bullets span-2 fL cf">
 			<p>SHAREHOLDERS</p>
 			<ul>
-				<li>Alyssa: 1000 shares. 2012 Start Date: Jan 1st</li>
-				<li>Jesse: 0 shares. 100 in reserve. 2012 Start Date: April 1st</li>
+				<li>Alyssa: 500 shares. 2012 Start Date: Jan 1st</li>
+				<li>Jesse: 500 shares. 2012 Start Date: April 1st</li>
 				<li>Melanie: 0 shares. 2012 Start Date: April 1st.</li>
 			</ul>
 		</div>
-		<div class="bullets span-2 last fR cf">
-			<p>EARNING FORMAT</p>
-			<ul class="deliverables">
-				<li>40% of shares are fixed (owned permanently by Alyssa)</li>
-				<li>60% are flexible</li>
-				<li>100 flexible shares earned for each year worked</li>
+		<div class="bullets span-2 fL cf">
+			<p>DIVIDENDS</p>
+			<ul>
+				<li>Dividends payed out annually on December 25th</li>
 			</ul>
 		</div>
+
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>sales commisions</h1>
+				<h1>fleet Creature finances</h1>
 			</div>
 			<div class="fR">
-				<h3>current commision: 5%</h3>
+				<h3>current commission: 20%</h3>
+			</div>
+		</div>
+		<div class = "right-column-proposals">
+			<div class="bullets span-2 last fR cf">
+				<p>CEO MANAGED BUCKETS</p>
+				<ul class="deliverables">
+					<li>Culture</li>
+					<li>Marketing & Sales</li>
+					<li>Education</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>COO MANAGED BUCKETS</p>
+				<ul class="deliverables">
+					<li>Legal</li>
+					<li>Financial Management</li>
+					<li>Overhead</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>CEO & COO MANAGED BUCKETS</p>
+				<ul class="deliverables">
+					<li>R & D</li>
+					<li>Contingency</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>BOARD OF DIRECTORS MANAGED BUCKETS</p>
+				<ul class="deliverables">
+					<li>Investment</li>
+				</ul>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
-			<p>HOW IT WORKS</p>
-			<ul>
-				<li>3% of total sale to be split by sales team for that sale</li>
+			<p>BUCKETS (Contigency < 30k)</p>
+			<ul>		
+				<li>40% | Contingency</li>
+				<li>10% | Overhead</li>
+				<li>10% | Marketing & Sales</li>
+				<li>5% | Company Culture</li>
+				<li>5% | Shareholder Dividend</li>
+				<li>5% | Legal</li>
+				<li>5% | Education</li>
+				<li>5% | Investment</li>
+				<li>5% | R&D</li>
 			</ul>
 		</div>
-		<div class="bullets span-2 last fR cf">
-			<p>SPLITING COMMISION</p>
-			<ul class="deliverables">
-				<li>Default split on commision is equal among all people participating in sales process</li>
-				<li>Case can be made for higher percentage, presented to company & decided by CEO</li>
+		<div class="bullets span-2 fL cf">
+			<p>BUCKETS (Contigency > 30k)</p>
+			<ul>		
+				<li>10% | Contingency</li>
+				<li>10% | Overhead</li>
+				<li>10% | Marketing & Sales</li>
+				<li>10% | Company Culture</li>
+				<li>10% | Shareholder Dividend</li>
+				<li>10% | Legal</li>
+				<li>10% | Education</li>
+				<li>10% | Investment</li>
+				<li>10% | R&D</li>
 			</ul>
 		</div>
+
 		<div class="banner span-4 last" id="ceo">
 			<div class="fL">
 				<h1>CEO</h1>
 			</div>
 			<div class="fR">
-				<h3>Alyssa Reese</h3>
+				<h3>Alyssa Reese | current commission: 10%</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
@@ -143,52 +200,112 @@
 				<ul class="deliverables">
 					<li>visionary</li>
 					<li>commited</li>
+					<li>creative</li>
 					<li>aspirational</li>
 					<li>confident</li>
 					<li>tenacious</li>
 					<li>bold</li>
 					<li>persistent</li>
 					<li>persuasive</li>
+					<li>informed</li>
 				</ul>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
-			<p>BUSINESS ACCOUNTABILITIES</p>
+			<p>SPECIFIC EXECUTIVE ACCOUNTABILITIES</p>
 			<ul>		
-				<li>Work towards the vision of fleetCreature (the WHY)</li>
-				<li>Protect the bottom line</li>
 				<li>Reinforce values, company brand & culture</li>
-				<li>Create new & expansive opportunities</li>
 				<li>Network with the tech community</li>
-				<li>Set standard for company morale & attitude</li>
-				<li>Research industry & trends</li>
-				<li>Write about/ teach about running tech companies</li>
-				<li>Hire & fire project manager & creative director</li>
-				<li>Create & update pricing strategy</li>
-				<li>Fill in where needed</li>
+				<li>Create, implement & update marketing strategy</li>
+				<li>Create, implement & update sales strategy</li>
+				<li>Create, implement & update creative strategy & guidelines</li>
+				<li>Encourage education & professional development</li>
+				<li>Hire & fire creative directors</li>
+				<li>Hire & fire new biz dev</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 fL cf">
-			<p>PROJECT ACCOUNTABILITIES</p>
+			<p>SHARED EXECUTIVE ACCOUNTABILITIES</p>
 			<ul>		
-				<li>Come in on sales meetings when appropriate</li>
+				<li>Work towards the vision & goals of fleetCreature</li>
+				<li>Create new & expansive opportunities</li>
+				<li>Set standard for company morale & attitude</li>
+				<li>Research industry & trends</li>
+				<li>Write about/ teach about running tech companies</li>
+				<li>Fill in where needed</li>
 			</ul>
 		</div>
-		<div class="banner span-4 last" id="creative-director">
+
+		<div class="banner span-4 last" id="coo">
 			<div class="fL">
-				<h1>Creative Director</h1>
+				<h1>COO</h1>
 			</div>
 			<div class="fR">
-				<h3>Alyssa Reese</h3>
+				<h3>Jesse Seavers | current commission: 10%</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
 			<div class="bullets span-2 last fR cf">
 				<p>EXPECTED HOURS</p>
 				<ul class="deliverables">
-					<li>20 hours</li>
+					<li>as many as it takes</li>
 				</ul>
 			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>EXPECTED EXPERIENCE LEVEL</p>
+				<ul class="deliverables">
+					<li>4 years minimum</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>CHARACTER TRAITS</p>
+				<ul class="deliverables">
+					<li>commited</li>
+					<li>personable</li>
+					<li>aspirational</li>
+					<li>inventive</li>
+					<li>confident</li>
+					<li>tenacious</li>
+					<li>calm</li>
+					<li>diligent</li>
+					<li>informed</li>
+					<li>organized</li>
+				</ul>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>SPECIFIC EXECUTIVE ACCOUNTABILITIES</p>
+			<ul>		
+				<li>Protect the bottom line</li>
+				<li>Create, implement & update pricing strategy</li>
+				<li>Create, implement & update legal strategy</li>
+				<li>Create, implement & update project management strategy</li>
+				<li>Create, implement & update financial management strategy</li>
+				<li>Manage equity disbursement</li>
+				<li>Hire & fire project managers</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>SHARED EXECUTIVE ACCOUNTABILITIES</p>
+			<ul>		
+				<li>Work towards the vision & goals of fleetCreature</li>
+				<li>Create new & expansive opportunities</li>
+				<li>Set standard for company morale & attitude</li>
+				<li>Research industry & trends</li>
+				<li>Write about/ teach about running tech companies</li>
+				<li>Fill in where needed</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last" id="creative-director">
+			<div class="fL">
+				<h1>Creative Directors</h1>
+			</div>
+			<div class="fR">
+				<h3>current commission: 20%</h3>
+			</div>
+		</div>
+		<div class = "right-column-proposals">
 			<div class="bullets span-2 last fR cf">
 				<p>EXPECTED EXPERIENCE LEVEL</p>
 				<ul class="deliverables">
@@ -213,12 +330,10 @@
 		<div class="bullets span-2 fL cf">
 			<p>BUSINESS ACCOUNTABILITIES</p>
 			<ul>		
-				<li>Hire/fire all other designers & creatives</li>
-				<li>Create design standards & practices for company</li>
+				<li>Hire/fire designers</li>
+				<li>Contribute to design standards & practices for fC</li>
 				<li>Protect & encourage the creative process & creative values of fleetCreature</li>
 				<li>Research current trends & techniques</li>
-				<li>Write about/ teach about design & creativity</li>
-				<li>Create relationships with developers/ development firms</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -229,9 +344,24 @@
 				<li>Set creative foundation for project if necessary</li>
 				<li>Educate/ mentor designers in fleetCreature process</li>
 				<li>Encourgage growth, leadership & creativity from designers on project</li>
+				<li>Communicate with clients throughout process</li>
 				<li>Provide critial feedback</li>
 				<li>Ensure final quality of work</li>
 				<li>Fill in where needed</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>COMPENSATION</p>
+			<ul>		
+				<li>Creative Directors are compensated on a fixed, project basis</li>
+				<li>Creative Director compensation is 20% of project bid. Project bids are created based on the <a href = "pricing.html">fleetCreature pricing menu</a>.</li>
+				<li>Payment is made 40% up front & 40% midway & 20% upon completion of project to fleetCreature standards</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>CONTRACT</p>
+			<ul>		
+				<li>Creative Directors are required to sign a <a href="https://docs.google.com/document/d/1VqvD36WAQET29WkS3v4M9d8mCjXBilDeovWIkEUUzWk/edit" target = "blank">work contract</a>.</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last" id="project-manager">
@@ -239,20 +369,15 @@
 				<h1>Project Manager</h1>
 			</div>
 			<div class="fR">
-				<h3>Jesse Seavers</h3>
+				<h3>current commission: 10%</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
 			<div class="bullets span-2 last fR cf">
-				<p>EXPECTED HOURS</p>
-				<ul class="deliverables">
-					<li>10-20 hours</li>
-				</ul>
-			</div>
-			<div class="bullets span-2 last fR cf">
 				<p>EXPECTED EXPERIENCE LEVEL</p>
 				<ul class="deliverables">
-					<li>2 years minimum</li>
+					<li>2 years minimum in management</li>
+					<li>1 year minimum working in tech industry</li>
 				</ul>
 			</div>
 			<div class="bullets span-2 last fR cf">
@@ -262,6 +387,9 @@
 					<li>consistent</li>
 					<li>organized</li>
 					<li>communicator</li>
+					<li>personable</li>
+					<li>firm</li>
+					<li>diligent</li>
 				</ul>
 			</div>
 		</div>
@@ -270,7 +398,7 @@
 			<ul>		
 				<li>Create/manage innovative organizational tools for workforce</li>
 				<li>Run daily standups</li>
-				<li>Reasearch/ write about organizational design for tech companies</li>
+				<li>Reasearch organizational design for tech companies</li>
 				<li>Keep things fresh</li>
 			</ul>
 		</div>
@@ -283,8 +411,18 @@
 				<li>Encourage creative solutions to problems that arise</li>
 				<li>Enspire client confidence & peace of mind</li>
 				<li>Check in with responsible fleetCreature parties on progress regularily</li>
+				<li>Update timelines if necessary</li>
+				<li>Ensure production team is fully informed, on track & operating under optimal conditions for creativity & productivity</li>
 				<li>Recognize problems & pull in necessary help where help needed</li>
 				<li>Follow up with clients at end of process (or middle for a large project)</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>COMPENSATION</p>
+			<ul>		
+				<li>Project Managers are compensated on a fixed, project basis</li>
+				<li>Project Manager compensation is 10% of project bid. Project bids are created based on the <a href = "pricing.html">fleetCreature pricing menu</a>.</li>
+				<li>Payment is made 40% up front & 40% midway & 20% upon completion of project to fleetCreature standards</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last" id="new-biz-dev">
@@ -292,20 +430,14 @@
 				<h1>New Business Development</h1>
 			</div>
 			<div class="fR">
-				<h3>Jesse Seavers</h3>
+				<h3>current commision: 5%</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
 			<div class="bullets span-2 last fR cf">
-				<p>EXPECTED HOURS</p>
-				<ul class="deliverables">
-					<li>10-20 hours</li>
-				</ul>
-			</div>
-			<div class="bullets span-2 last fR cf">
 				<p>EXPECTED EXPERIENCE LEVEL</p>
 				<ul class="deliverables">
-					<li>2 years minimum</li>
+					<li>2 year working in tech</li>
 				</ul>
 			</div>
 			<div class="bullets span-2 last fR cf">
@@ -314,11 +446,14 @@
 					<li>ambitious</li>
 					<li>confident</li>
 					<li>fearless</li>
-					<li>relatable</li>
 					<li>persuasive</li>
 					<li>intuitive</li>
 					<li>passionate</li>
 					<li>informed</li>
+					<li>tenacious</li>
+					<li>personable</li>
+					<li>inspired</li>
+					<li>organized</li>
 				</ul>
 			</div>
 		</div>
@@ -327,35 +462,40 @@
 			<ul>		
 				<li>Manage & update client leads list</li>
 				<li>Follow up with all leads</li>
-				<li>Bring in appropriate help at appropriate time for sales</li>
-				<li>Manage pricing negotiations</li>
 				<li>Bi-annual kind gesture towards current & past clients</li>
-				<li>Identify potential clients & make contacts</li>
-				<li>Research industry pricing & sales strategies & write about them</li>
+				<li>Identify potential clients suited to fC & make contacts</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PROJECT ACCOUNTABILITIES</p>
 			<ul>		
 				<li>Make the sale!</li>
+				<li>Create sales meetings</li>
+				<li>Bring in necessary help for sales meetings, timeline estimates & cost estimates</li>
+				<li>Estimate cost & timeline for projects in association with project managers & production crew.</li>
+				<li>Negotiate cost & timeline with client.</li>
+				<li>Create contract for project & obtain signatures</li>
 				<li>Follow up if we don't make the sale & try to glean infomation as to why, how they found us, who they went with etc.</li>
 			</ul>
 		</div>
+		<div class="bullets span-2 fL cf">
+			<p>COMPENSATION</p>
+			<ul>		
+				<li>New Biz Dev is compensated on a fixed, project basis</li>
+				<li>New Biz Dev compensation is 5% of project bid. Project bids are created based on the <a href = "pricing.html">fleetCreature pricing menu</a>.</li>
+				<li>Payment is made 40% up front & 40% midway & 20% upon completion of project to fleetCreature standards</li>
+			</ul>
+		</div>
+
 		<div class="banner span-4 last" id="uiux-designer">
 			<div class="fL">
 				<h1>UI/UX Designer</h1>
 			</div>
 			<div class="fR">
-				<h3>Melanie Gower + fleetCreative League Contractors</h3>
+				<h3>current commission: 25%</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
-			<div class="bullets span-2 last fR cf">
-				<p>EXPECTED HOURS</p>
-				<ul class="deliverables">
-					<li>Variable</li>
-				</ul>
-			</div>
 			<div class="bullets span-2 last fR cf">
 				<p>EXPECTED EXPERIENCE LEVEL</p>
 				<ul class="deliverables">
@@ -377,13 +517,6 @@
 					<li>self disciplined</li>
 				</ul>
 			</div>
-		</div>
-		<div class="bullets span-2 fL cf">
-			<p>BUSINESS ACCOUNTABILITIES</p>
-			<ul>		
-				<li>Help with business design needs</li>
-				<li>Research/ write about current design trends</li>
-			</ul>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PROJECT ACCOUNTABILITIES</p>
