--- a/pricing.html
+++ b/pricing.html
@@ -302,7 +302,7 @@
 				<h1>Designer on Retainer</h1>
 			</div>
 			<div class="fR">
-				<h3>$1000/month per 10 hrs</h3>
+				<h3>$100/hr</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -311,6 +311,7 @@
 				<li>It is often necessary for companies to have a long term relationship with a UI/UX designer but not necessary or economical to have a full time designer on staff</li>
 				<li>Have a designer on hand at all times that knows your product & can provide design support & consulting</li>
 				<li>Guarantee availability for a certain # of hours every month</li>
+				<li>Minimum retainer: 20 hours/wk for 2 months</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
@@ -382,7 +383,7 @@
 			<p><span class = "darkText">40%</span>downpayment to get started. Payment up front for orders under $5k.</p>
 			<p>A legal contract stipulating our business relationship is signed at the beginning of each new project.</p>
 			<p>Buy one or more design element and get a <span class = "darkText">25% discount</span> on the lowest priced element.</p>
-			<p>Each projects activates the talented fC team. Please 	email our <a href="mailto:sales@fleetcreature.com">Lead Coversions Department</a> for a bid on your project. Thank you for your interest in fleetCreature!</p>
+			<p>Each projects activates the talented fC team. Please <a href="mailto:sales@fleetcreature.com">email our Lead Coversions Department</a> for a bid on your project. Thank you for your interest in fleetCreature!</p>
 		</section>
 	</div>
 </body>
