update to internal doc

--- a/internal.html
+++ b/internal.html
@@ -151,6 +151,7 @@
 				<li>40% | Contingency</li>
 				<li>10% | Overhead</li>
 				<li>10% | Marketing & Sales</li>
+				<li>10% | Financial Management</li>
 				<li>5% | Company Culture</li>
 				<li>5% | Shareholder Dividend</li>
 				<li>5% | Legal</li>
@@ -171,6 +172,7 @@
 				<li>10% | Education</li>
 				<li>10% | Investment</li>
 				<li>10% | R&D</li>
+				<li>10% | Financial Management</li>
 			</ul>
 		</div>
 
