added vui to the homepage

--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@ overflow:hidden;
                     <div class="sample jesse">
                     </div>
                     <p><span class="emphasis">Jesse Seavers</span></p>
-                    <p>Project Manager & New Biz Dev</p>
+                    <p>Client Strategy Director</p>
                     <p><a href= "http://www.twitter.com/#!/jseav19" target = "blank">@jseav19</a></p>
                     <p><a href = "http://www.linkedin.com/in/jseav19" target = "blank">Linkedin</a></p>
                 </div>
@@ -1249,12 +1249,12 @@ overflow:hidden;
                     <p><a href = "http://www.linkedin.com/in/melaniegower" target = "blank">Linkedin</a></p>
                 </div>
                 <div class="other-interests span-1 cf last">
-                    <div class="sample creature">
+                    <div class="sample vui">
                     </div>
-                    <p><span class="emphasis">Jelly Walrus</span></p>
-                    <p>Resident .COM</p>
-                    <p>(Creature Of the Month)</p>
-                    <p>by GIRLvsCODE</p>
+                    <p><span class="emphasis">Vui Nguyen</span></p>
+                    <p>Mobile Applications Engineer</p>
+                    <p><a href= "http://www.twitter.com/#!/sunfishgurl" target = "blank">@sunfishgurl</a></p>
+                    <p><a href = "http://www.linkedin.com/in/vuinguyen" target = "blank">Linkedin</a></p>
                 </div>
             </div>
             <div class="banner span-4 last">
